--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -2,9 +2,9 @@ skip_reboots: true
 
 ## nexus cashed package proxy
 nexus: yes
-nexusIP: "192.168.123.180"
-nexusPort: "8081"
-nexusProto: "http"
+nexus_host: "192.168.123.180"
+nexus_port: "8081"
+nexus_proto: "http"
 
 # update system
 upgrade_packages: yes
@@ -15,7 +15,7 @@ set_firewall: yes
 # clamav configuration
 clamav_offlinedb: no
 # following values will only set on clamav_offlinedb(yes)
-clamav_localcache: "{{ nexusProto }}://{{ nexusIP }}:{{ nexusPort }}/repository/clamav-db/"
+clamav_localcache: "{{ nexus_proto }}://{{ nexus_host }}:{{ nexus_port }}/repository/clamav-db/"
 clamav_dbmirror: "database.clamav.net"
 clamav_cldcompress: "yes"
 
