--- a/tasks/logins.yml
+++ b/tasks/logins.yml
@@ -18,7 +18,7 @@
 
     - name: set var vor githubusercontent for internet
       ansible.builtin.set_fact:
-        raw_githubusercontent_url: "{{ nexusProto }}://{{ nexusIP }}:{{ nexusPort }}/repository/raw-githubusercontent"
+        raw_githubusercontent_url: "{{ nexus_proto }}://{{ nexus_host }}:{{ nexus_port }}/repository/raw-githubusercontent"
       when: nexus
 
     - name: load wordlists
