--- a/tasks/logins.yml
+++ b/tasks/logins.yml
@@ -358,7 +358,7 @@
 
     - name: restarting sshd
       ansible.builtin.service:
-        name: sshd
+        name: "{{ ssh_service_name }}"
         state: started
       notify: clear caches
 
