usbauth add used devices

--- a/files/usbauth.conf
+++ b/files/usbauth.conf
@@ -9,3 +9,13 @@ allow bInterfaceClass==03
 
 # allow usb storage
 allow bDeviceClass==00 bInterfaceClass==08
+
+# allow ethernet devices
+allow bDeviceClass==00 bInterfaceClass==02 bInterfaceSubClass==06
+
+# allow specific RTL8153 Gigabit Ethernet Adapter
+allow bDeviceClass==00 bInterfaceClass==FF bInterfaceSubClass==FF
+allow bDeviceClass==00 bInterfaceClass==10 bInterfaceSubClass==00
+
+# allow Chip/Smartcard readers
+allow bDeviceClass==00 bInterfaceClass==0B
