wip - remove snapd

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -13,6 +13,11 @@
   tags:
    - volumes
 
+- name: snapd
+  ansible.builtin.import_tasks: snapd.yml
+  tags:
+    - snapd
+
 - name: software
   ansible.builtin.import_tasks: software.yml
   tags:
