--- a/tasks/snapd.yml
+++ b/tasks/snapd.yml
@@ -11,10 +11,20 @@
   # when: ansible_distribution == "Ubuntu" and  ansible_lsb.codename >= "24.04"
   tags: snapd_rmsnaps
 
-- name: snapd - uninstall all snaps
+- name: snapd - uninstall all snap applications
   ansible.builtin.command:
     cmd: "snap remove --purge {{ item }}"
   loop: "{{ installed_snap_apps.stdout_lines }}"
+  # when: ansible_distribution == "Ubuntu" and  ansible_lsb.codename >= "24.04"
+  tags: snapd_rmsnaps
+
+- name: snapd - uninstall basic snaps
+  ansible.builtin.command:
+    cmd: "snap remove --purge {{ item }}"
+  loop:
+    - core22
+    - bare
+    - snapd
   # when: ansible_distribution == "Ubuntu" and  ansible_lsb.codename >= "24.04"
   tags: snapd_rmsnaps
 
@@ -26,7 +36,7 @@
   # when: ansible_distribution == "Ubuntu" and  ansible_lsb.codename >= "24.04"
   tags: snapd_rm
 
-- name : snapd - remove
+- name: snapd - remove
   ansible.builtin.apt:
     name: snapd
     state: absent
@@ -37,5 +47,12 @@
 - name: snapd - remove unused packages
   ansible.builtin.apt:
     autoclean: true
+  # when: ansible_distribution == "Ubuntu" and  ansible_lsb.codename >= "24.04"
+  tags: snapd_rm
+
+- name: prevent snapd from being reinstalled
+  ansible.builtin.copy:
+    dest: /etc/apt/preferences.d/nosnap.pref
+    src: nosnap.pref
   # when: ansible_distribution == "Ubuntu" and  ansible_lsb.codename >= "24.04"
   tags: snapd_rm
